# gld

./: CMakeLists.txt  README.md  glwidget.cpp  glwidget.h  line.cpp  line.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rectangle.cpp  rectangle.h  rectilinearfigure.cpp  rectilinearfigure.h  straightline.cpp  straightline.h  treemodel.cpp  treemodel.h  triangle.cpp  triangle.h
